<resources>
    <string name="app_name">Controle de Contas a Pagar</string>
    <string name="categoria">Categoria:</string>
    <string name="adicionar">Adicionar</string>
    <string name="contas_a_pagar">Contas a Pagar</string>
    <string name="despesa">Despesa:</string>
    <string name="descricao">descrição</string>
    <string name="valor">Valor:</string>
    <string name="vencimento">Vencimento:</string>
    <string name="categoria_vazia">Digite o nome da categoria</string>
    <string name="selecione_excluir">Selecione o item que deseja excluir</string>
    <string name="confirmacao">Confirmação</string>
    <string name="deseja_remover">Deseja realmente remover </string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="selecione_editar">Selecione o item que deseja editar</string>
    <string name="preencha_campos">Preencha todos os campos </string>
    <string name="remover">Excluir</string>
    <string name="sair">Sair</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="descartar">Descartar todas as modificações e voltar?
    Use o botão do menu para confirmar as modificações.
    </string>
    <string name="voltar">Voltar</string>
    <string name="confirmar_descarte">Descartar e fechar</string>
</resources>