<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroConta">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoria"
            android:textSize="24sp"
            android:layout_marginBottom="16sp"
            android:text="Despesas da Casa"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/despesa"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10sp"
            android:layout_marginLeft="-5sp"
            android:id="@+id/ed_descricao"
            android:hint="@string/descricao"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="65sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/valor"/>
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/vencimento"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5sp"
                android:layout_marginRight="10sp"
                android:id="@+id/ed_valor"
                android:inputType="numberDecimal"
                android:layout_weight="2"/>
            <EditText
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:id="@+id/ed_vecimento"
                android:clickable="true"
                android:editable="false"
                android:onClick="selecionarData"
                android:layout_weight="2"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:text="@string/adicionar"
                android:layout_weight="1"
                android:id="@+id/bt_confirmar"
                android:onClick="adicionar"/>
        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="3sp"
            android:text="@string/cancelar"
            android:layout_weight="1"
            android:onClick="cancelar"/>
        </LinearLayout>
   <ListView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lista_contas"/>
</LinearLayout>