<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="15sp"
            android:text="@string/categoria"/>
        <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/ed_categoria"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3sp"
            android:textAlignment="center"
            android:text="@string/adicionar"
            android:id="@+id/bt_confirmar"
            android:onClick="adicionar"/>
        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3sp"
            android:textAlignment="center"
            android:text="@string/cancelar"
            android:onClick="cancelar"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:textSize="16sp"
        android:text="@string/contas_a_pagar"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12sp"
        android:layout_marginTop="10sp"
        android:divider="@null"
        android:dividerHeight="-1dp"
        android:id="@+id/lista_categorias"/>
</LinearLayout>